--- a/Automates/Automates.vcxproj
+++ b/Automates/Automates.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClCompile Include="Ast.cpp" />
     <ClCompile Include="Automates.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="State.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
