--- a/Automates/Automates.vcxproj
+++ b/Automates/Automates.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Automates.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="State.cpp" />
+    <ClCompile Include="TestAst.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
